sammons search button white on hover

--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -112,11 +112,11 @@
 		div.product_detail { }
 		div.product_detail button.more { 
 				margin-top:20px; 
-				padding: 3px 5px 3px 5px; 
+				padding: 3px 5px 5px 5px; 
 				background-color:orange; 
-				color:white!important; 
 				border:none
 				}
+		div.product_detail button.more a:hover { color:white; }
 	</style> 
 
 <% end %>	
