--- a/app/views/layouts/_google_cse.html.erb
+++ b/app/views/layouts/_google_cse.html.erb
@@ -3,16 +3,17 @@
 <script type="text/javascript"> 
   google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST});
   google.setOnLoadCallback(function() {
-    var customSearchControl = new google.search.CustomSearchControl(
-      '003127155990866530065:djbmv7tmoes');
-
+    var customSearchOptions = {};  var customSearchControl = new google.search.CustomSearchControl(
+      '000064363312609554513:jmpucuppl78', customSearchOptions);
     customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
     var options = new google.search.DrawOptions();
-    options.enableSearchboxOnly("http://www.bavia.com/search/results");
+    options.enableSearchboxOnly("http://tm3ror.heroku.com/search/results.html");
     customSearchControl.draw('cse-search-form', options);
   }, true);
 </script>
 
+<link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
+<link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
 
 
 
