--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -324,7 +324,11 @@
 				<li><a href="https://checkout.netsuite.com/s.nl/c.1114349/sc.4/.f">Checkout</a></li>
 			</ul>
 		</div>
-	
+		
+		<!-- Google site search results ——————————————————————————————————————— -->
+		<!-- shown on page from which the search was initiated --> 
+		<div id="cse" style="width:100%;"></div> 
+		
 		<!--
 		<form id="search_form" action="/en/search/google_cse_adv" method="post" name="search_form">
 			<script type="text/javascript" src="http://www.google.com/jsapi">
@@ -345,7 +349,7 @@ google.load('search', '1');
 			<div class="clear" style=""></div>
 		</form>
 	-->
-	
+	 
 		<!-- divs for popup dialogs     ————————————————————————————————————————————— -->
 	
 		
