--- a/app/views/shared/_menu_colored.html.erb
+++ b/app/views/shared/_menu_colored.html.erb
@@ -55,15 +55,24 @@
 		<div id="cse-search-form" style="width: 100%;">Loading</div>
 		<script src="http://www.google.com/jsapi" type="text/javascript"></script>
 		<script type="text/javascript"> 
-		  google.load('search', '1', {language : 'en'});
+		  google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST});
+			/* attempts to override the minimalist theme here don't work.
+			   How do I get it to use my local copy of the css file minimalist.css? 
+			$("div.gsc-clear-button").css("border","1px solid gray");
+			$("div.gsc-clear-button").css("padding","5px 4px 5px 4px");
+			$("div.gsc-clear-button").css("margin-left","2px");
+			*/
 		  google.setOnLoadCallback(function() {
-			var customSearchControl = new google.search.CustomSearchControl('000064363312609554513:jmpucuppl78');
-			customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
-			var options = new google.search.DrawOptions();
-			options.enableSearchboxOnly("http://trumedical2.heroku.com/site/search");    
-			customSearchControl.draw('cse-search-form', options);
+		    var customSearchControl = new google.search.CustomSearchControl(
+		      '000064363312609554513:jmpucuppl78');
+
+		    customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+		    var options = new google.search.DrawOptions();
+		    options.enableSearchboxOnly("http://");
+		    customSearchControl.draw('cse-search-form', options);
 		  }, true);
 		</script>
+
 		<link rel="stylesheet" href="http://www.google.com/cse/style/look/default.css" type="text/css" />
 		<style type="text/css">
 		  input.gsc-input {
