Google CSE local stylesheet — try again

--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -46,7 +46,7 @@
 		<script src="http://www.google.com/jsapi" type="text/javascript"></script>
 		<script type="text/javascript"> 
 		  /*google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST}); */
-		  google.load('search', '1', {language : 'en', style : src="http://tm3ror/heroku.com/stylesheets/google_cse_minimalist.css"}); 
+		  google.load('search', '1', {language : 'en', style : src="http://tm3ror.heroku.com/stylesheets/google_cse_minimalist.css"}); 
 			/* attempts to override the minimalist theme here don't work.
 			   How do I get it to use my local copy of the css file minimalist.css? 
 			$("div.gsc-clear-button").css("border","1px solid gray");
