--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -47,7 +47,7 @@
 		<script type="text/javascript"> 
 		  /*google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST}); */
 		  google.load('search', '1', {language : 'en', style : src="http://tm3ror.heroku.com/stylesheets/google_cse_minimalist.css"}); 
-			/* attempts to override the minimalist theme here don't work.
+			/* attempts to override the minimalist theme using jQuery don't work.
 			   How do I get it to use my local copy of the css file minimalist.css? 
 			$("div.gsc-clear-button").css("border","1px solid gray");
 			$("div.gsc-clear-button").css("padding","5px 4px 5px 4px");
@@ -85,13 +85,8 @@
 		</form>
 		-->
 		<!-- Google site search results ——————————————————————————————————————— -->
-		<!-- styles set in /public/stylesheets/google_cse_minimalist.css? No. firebug shows minimalist.css. Where is this coming from?  -->
+		<!-- styles set in http://tm3ror.heroku.com/stylesheets/google_cse_minimalist.css   -->
 		<div id="cse" style="width:100%;">
-			<style type="text/css">
-					a.gs-title { font-size: 11px!important; color: red!important;}
-					div.gs-snippet { font-size: 11px!important; color: red!important;}
-					.gs-spelling-original { font-size: 11px!important; color: red!important;}
-			</style>
 		</div>
 		
 	</div> <!-- end div 'menu_main' -->
