--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -60,7 +60,8 @@ Unknowns:
 						slideTransitionSpeed:800,
 						controlNavEnabled:true,
 						slideSpacing:0,
-						slideshowDelay:3000
+						slideshowDelay:3000,
+						slideshowPauseOnHover: false  
 								
 		    });
 	
