--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -67,6 +67,7 @@
 	</script>
 	
 	<style type="text/css">
+		div#product_goodies {max-height:625px; overflow-y:auto; padding-right:20px; margin-top:5px;}
 		div#product_image_description { margin-top:20px; padding-left:40px;}
 		div#product_image_description img { margin-bottom:15px;}
 		div#products { margin-top:10px; padding-left:40px;}
@@ -116,7 +117,9 @@
 			<!-- menu ———————————————————————————————————————————————————————  -->
 		
 			<%= render(:partial => '/shared/menu') %>
-			<%= render(:partial => '/shared/search') %>
+			<!-- Commented out: Google Site Search results now returned in div#cse below menu on left
+			<#= render(:partial => '/shared/search') #>
+			-->
 
 	    <!-- main content ——————————————————————————————————————————————— -->
 
@@ -134,7 +137,7 @@
 				<%= render(:partial => "/shared/menu_popups") %>
 
 	      <!-- product set —————————————————————————————————————————————— -->
-
+				<div id="product_goodies"> <!-- so can scroll vertically if too deep -->
 				<div id="product_image_description">
 					<!-- change to large picture --> 
 					<%= image_tag("/images/products/all_large/" + @product_set.image_filename[0,6] +"-000" + ".jpg") %>
@@ -223,7 +226,7 @@
 					</table>
 				
 				</div> <!-- end div#products -->
-
+			</div> <!-- end div#product_goodies -->
 			</div> <!-- end div#main_content -->
 
 		</div><!-- end div#subcontainer -->
