--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -108,7 +108,8 @@
 			<!-- menu —————————————————————————————————————————————————————  -->
 		
 			<%= render :partial => 'shared/menu' %>
-			<%= render :partial => 'shared/search' %>
+			<!-- Commented out: Google search results moved to 'cse' div below left menu (in shared/_menu.html.erb) <#= render :partial => 'shared/search' #>
+			-->
 
 	    <!-- main content —————————————————————————————————————————————— -->
 
