home page non-product popups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,7 @@
 		<%= stylesheet_link_tag "menu.css" %> 
     <%= stylesheet_link_tag "tabs.css" %>
     	<!-- <%# stylesheet_link_tag "jquery_tools_tabs_no_images.css" %> unused; used by Mavic tabbed sibling nav; not in /public/javascripts -->
-		<%= stylesheet_link_tag "left_nav_popups.css" %> <!-- added by TA 1/4/2012 -->
-	
-		
+		<%= stylesheet_link_tag "left_nav_popups.css" %> <!-- added by TA 1/4/2012; controls top alignment of popups; move into index.html.erb?  -->
 		<!-- standard js files -->
 		
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
