--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -46,6 +46,7 @@ Unknowns:
 	
 	<%= stylesheet_link_tag "royalslider.css" %>
 	<%= stylesheet_link_tag "royalslider-skins/default/default.css" %>
+	<%= stylesheet_link_tag "new_left_nav_popops.css" %> <!-- override cached left_nav_popups.css -->
 	<%= javascript_include_tag "jquery.easing.1.3.min.js" %>
 	<%= javascript_include_tag "royal-slider-8.0.js" %>
 	
@@ -94,6 +95,15 @@ Unknowns:
 	<!--  Removed in debugging; document_ready declarations for all left-menu items 
 				put in application.html.erb — even those that occur only on the home pag. 
 	-->
+	<!-- override the declarations in stylesheets/left_nav_popups.css now on Amazon S3 with a far forward expires header; may have to defeat overflow, and height-->
+	<style type="text/css">
+		.bold { font-weight: bold; color:black; }
+		#popup_trumedical {top:44px; background-color:#0094DE; color:white; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
+		#popup_patients {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; } 
+		#popup_providers {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
+		#popup_payors {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px;height:auto; overflow:visible; }
+
+	</style>
 
 
 <% end %>
@@ -305,7 +315,7 @@ Unknowns:
 				<p>Sales and marketing activities are divided into two categories, clinic and patient. Clinic sales are generated direct to clinics by TMS direct sales employees and contracted sales associates. Additionally, direct sales to clinics are accomplished through catalog marketing and our 21st century web ordering vehicle. Indirect clinical sales are achieved through dealers/re-sellers strategically located throughout the U.S.</p>
 				<p>Patient sales are generated on a referral basis by clinics both on a prescription and non-prescription basis. TMS is an accredited Medicare and Medicaid provider and currently accepts assignments from Medicare and Medicaid programs on certain items in TN, GA and KY. Additionally, TMS maintains contacted in network reimbursement status with many commercial payers in TN, GA & KY.</p>
 				<p>Our management team believes there is an excellent opportunity for sustainable multi-year growth due to recent consolidations and our multi channeled go to market strategy.  We believe that many of the products we offer provide cost effective approaches to treating many conditions and that there will be a solid demand as the health care industry reforms. </p>
-				<div id="popup_bottom_pad"></div>
+
 			</div>
 
 			<!-- Patients popup ————————————————————————————————————————————————— -->
@@ -317,7 +327,7 @@ Unknowns:
 				<p>We also partner with the Payers (Insurance Companies) on behalf of the patient to maximize the patient’s opportunity for recovery.  We work side by side with the insurance companies to ensure that the products we provide are covered for patient care.  We communicate benefit coverage and authorization requirements to the patient and work with the Clinicians to meet the needs of the patient efficiently and affordably.</p>
 				<p>We have a team of customer service professionals who can assist patients, caregivers, and/or clinicians with products offerings and requirements for insurance billing.  We also provide fitting services to ensure that products fit properly giving the patient the additional support that they need.</p>  
 				<p>To learn more about our patient services please feel free to call us at, 877.882.7844 we’ll be glad to hear from you and look forward to working with you.</p>
-				<div id="popup_bottom_pad"></div>
+
 			</div>
 
 
@@ -325,41 +335,36 @@ Unknowns:
 			<div id="popup_providers" class="popup_base">
 				<img class="close" src="/images/utility/close16_white.png">
 				<div class="row">
-					<p>TruMedical Solutions, LLC. is dedicated to meeting the needs of the patient. This website is dedicated to that end.</p> 
-					<p>We offer the Provider (Physical Therapist, Occupational Therapist, Certified Athletic Trainer, Medical Doctor, Chiropractor etc…) the products they need to help the patient.</p> 
-					<p>We offer ten different categories of products to meet all your clinic needs.</p>
-					<ol>
-						<li>Modalities</li>
-						<li>Clinic Supplies</li>
-						<li>Tables & Traction</li>
-						<li>Fitness & Cardio Equipment</li>
-						<li>Orthopedic Products</li>
-						<li>ATC & Taping</li>
-						<li>Evaluation Products</li>
-						<li>Aids to Daily Living (ADL’s)</li>
-						<li>Lymphedema Products</li>
-						<li>Wound Care Products.</li>
-					</ol>
-
-					<p>Our Website offers many great tools for the clinician.</p>
-					<ol>
-						<li>View All your Transactions</li>
+					<p>TruMedical Solutions, LLC, is dedicated to meeting the needs of the patient.</p> 
+					<p>We offer the <span class="bold">Provider</span>:
+						<ul>
+							<li>Physical Therapist</li> 
+							<li>Occupational Therapist</li> 
+							<li>Certified Athletic Trainer</li> 
+							<li>Medical Doctor</li> 
+							<li>Chiropractor</li> 
+							<li>...  
+						</ul>
+					the products they need to help the patient.</p> 
+					<p>We offer <span class="bold">ten different categories of products</span> to meet all of your clinic needs.</p>
+					<p><span class="bold">Our website</span> offers many great <span class="bold">tools for the clinician.</span></p>
+					<ul>
+						<li>View an On-Line Catelog of Products — some available only through Clinicians</li>
 						<li>Request a Quote</li>
 						<li>Place and Track orders</li>
-						<li>Print a statement</li>
-						<li>Request a catalog</li>
+						<!-- <li>Print a Statement</li> -->
+						<li>Request a Catalog</li>
 						<li>Request Support</li>
 						<li>View Custom Pricing</li>
 						<li>View Material Safety Data Sheets (MSDS)</li>
 						<li>Part Number Cross Reference Tool</li>
-						<li>Write a product review</li>
-						<li>View promotions</li>
+						<!-- <li>Write a Product Review</li> -->
+						<li>View Promotions</li>
 						<li>Link to TruMedical Solutions on Twitter & Facebook</li>
-					</ol>
+					</ul>
 					<p>We look forward and are thankful to partner with the Provider to meet the needs of the Patient.</p>
-					<p>If you have any questions or comments please feel free to contact us.</p>
+					<p>If you have any questions or comments please feel free to <span class="bold">contact us.</span></p>
 				</div> 
-				<div id="popup_bottom_pad"></div> 
 			</div>
 
 			<!-- Payors popup ————————————————————————————————————————————————————-->
